fix bug 54792 by running assert dialog out or process on Win32. r=danm sr=brendan